diseño de las vistas

--- a/src/com/bank/accesoDatos/app.properties
+++ b/src/com/bank/accesoDatos/app.properties
@@ -1,4 +1,4 @@
-url= jdbc:mysql://localhost:3306/west_bank
-user = Magus
-pass = maguxamaguxa
+url= jdbc:mysql://localhost:3306/WESTBANKCLIENTE
+user = ADMIN
+pass = tg-m2Ej7
 
